--- a/assets/sass/3_modules/_postcard.scss
+++ b/assets/sass/3_modules/_postcard.scss
@@ -197,6 +197,10 @@
             h2 {
                 padding-bottom:3px;
                 padding-top: $sm-spacing;
+
+                &.form-label{
+                    border-top: none;
+                }
             }
        
             p {
